# decatholac-mango-tarnished

./: .editorconfig  .gitignore  Cargo.toml  README.md  build-windows.sh  build.sh  justfile  settings.sample.toml
src/: announcer.rs  config.rs  discord.rs  gofer.rs  main.rs  structs.rs  utils.rs
src/database/: database.rs  sqlite.rs
src/parsers/: html.rs  json.rs  json_in_html.rs  mod.rs  rss.rs  utils.rs
