[package]
name = "decatholac-mango-tarnished"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
feed-rs = "1.3"
reqwest = { version = "0.11.18", features = ["gzip", "brotli"] }
rusqlite = { version = "0.29.0", features = ["bundled", "modern-full"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
url = "2.3.1"
