[package]
name = "decatholac-mango-tarnished"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.73"
chrono = "0.4.26"
colored = "2.0.0"
crony = "0.3.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ctrlc = "3.4.0"
feed-rs = "1.3"
json_dotpath = "1.1.0"
nom = "7.1.3"
poise = "0.5.5"
reqwest = { version = "0.11.18", default-features = false, features = ["gzip", "brotli", "default-tls"] }
rusqlite = { version = "0.29.0", features = ["bundled", "modern-full", "chrono"] }
scraper = "0.16.0"
serde_json = "1.0.96"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "model"] }
tokio = { version = "1.28.2", features = ["full", "time"] }
toml = "0.7.4"
url = "2.3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
