[package]
name = "decatholac-mango-tarnished"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
colored = "2.0"
crony = "0.3"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
ctrlc = "3.4"
feed-rs = "1.3"
json_dotpath = "1.1"
nom = "7.1"
poise = "0.5"
reqwest = { version = "0.11", default-features = false, features = ["gzip", "brotli", "default-tls"] }
rusqlite = { version = "0.29", features = ["bundled", "modern-full", "chrono"] }
scraper = "0.16"
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["builder", "model"] }
tokio = { version = "1.28", features = ["full", "time"] }
toml = "0.7"
url = "2.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
